# crypto-capm

./: README.md  calculate_capm.py  pyproject.toml
