[project]
name = "crypto-capm-calculator"
version = "0.1.0"
description = "A tool to calculate Cost of Equity for crypto assets using CAPM."
authors = [
    {name = "SFYL"}
]
readme = "README.md"
requires-python = "^3.13"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "yfinance (>=0.2.63,<0.3.0)",
    "scipy (>=1.16.0,<2.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
